add login with entity

--- a/CompanyEmployees.API/appsettings.json
+++ b/CompanyEmployees.API/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "sqlConnection": "Server=localhost,1433; Initial Catalog=CompanyEmployee; User ID=sa; Password=Pauloosilas@1; TrustServerCertificate=True"
+    "sqlConnection": "Server=localhost,1433; Initial Catalog=CompanyEmployee2; User ID=sa; Password=Pauloosilas@1; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
