add refresh token

--- a/CompanyEmployees.API/appsettings.json
+++ b/CompanyEmployees.API/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "sqlConnection": "Server=localhost,1433; Initial Catalog=CompanyEmployee2; User ID=sa; Password=Pauloosilas@1; TrustServerCertificate=True"
   },
+    "JwtSettings": {
+      "validIssuer": "Pauloosilas",
+      "validAudience": "https://localhost:5000",
+      "Key": "LWDASDFQWERASDFASDPLMKIJMJSDDFFA",
+      "expires": 5
+    }
+  ,
   "AllowedHosts": "*"
 }
